--- a/portal/src/assets/main.css
+++ b/portal/src/assets/main.css
@@ -112,7 +112,8 @@ nav.links .link-icon {
   max-height: 70vh;
   overflow-y: scroll;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.5);
+  margin-top: 0.5em;
+  background: var(--background-captions);
   border-radius: 10px;
   display: flex;
   flex-direction: column-reverse;
